# snake

./: .gitignore  CMakeLists.txt
src/: fruit.cpp  fruit.h  game.cpp  game.h  main.cpp  snake.cpp  snake.h  utils.cpp  utils.h
